@@ -118,6 +118,9 @@
 #ifndef RLIMIT_NICE
 #define RLIMIT_NICE	RLIMIT_UNKNOWN
 #endif
+#ifndef RLIMIT_NOVMON
+#define RLIMIT_NOVMON	RLIMIT_UNKNOWN
+#endif
 #ifndef RLIMIT_NPROC
 #define RLIMIT_NPROC	RLIMIT_UNKNOWN
 #endif
